@@ -11,6 +11,7 @@ Morten:
 	* Fix GEOMEAN problem.  [#829]
 	* Fix dialog accel collision.  [#830]
 	* Introspection improvements.
+	* Named expression fixes.  [#833]
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.59
